// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalPassengerQuery - snapshots individual is filling out form for someone else 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan their journey"
    sectionPosition="Section 2 of 4"
  />
  <Question
    text="Does John want to bring anyone else with them on the journey?"
  />
  <RadioGroup
    error={null}
  >
    <label
      className="wmrards-fe-label"
      htmlFor="additionalPassenger"
    >
      For example, a carer or guardian. They do not need to be a registered Ring and Ride scheme user.
    </label>
    <FieldError
      text={null}
    />
    <RadioButton
      fieldName="additionalPassenger"
      label="Yes"
      onClickCallback={[Function]}
      validation={[Function]}
      value="yes"
    />
    <RadioButton
      fieldName="additionalPassenger"
      label="No"
      onClickCallback={[Function]}
      validation={[Function]}
      value="no"
    />
  </RadioGroup>
</FormSection>
`;

exports[`AdditionalPassengerQuery - snapshots individual is filling out form for themselves 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan your journey"
    sectionPosition="Section 2 of 4"
  />
  <Question
    text="Do you want to bring anyone else with you on the journey?"
  />
  <RadioGroup
    error={null}
  >
    <label
      className="wmrards-fe-label"
      htmlFor="additionalPassenger"
    >
      For example, a carer or guardian. They do not need to be a registered Ring and Ride scheme user.
    </label>
    <FieldError
      text={null}
    />
    <RadioButton
      fieldName="additionalPassenger"
      label="Yes"
      onClickCallback={[Function]}
      validation={[Function]}
      value="yes"
    />
    <RadioButton
      fieldName="additionalPassenger"
      label="No"
      onClickCallback={[Function]}
      validation={[Function]}
      value="no"
    />
  </RadioGroup>
</FormSection>
`;

exports[`AdditionalPassengerQuery - snapshots renders with an error 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan your journey"
    sectionPosition="Section 2 of 4"
  />
  <Question
    text="Do you want to bring anyone else with you on the journey?"
  />
  <RadioGroup
    error="Required"
  >
    <label
      className="wmrards-fe-label"
      htmlFor="additionalPassenger"
    >
      For example, a carer or guardian. They do not need to be a registered Ring and Ride scheme user.
    </label>
    <FieldError
      text="Required"
    />
    <RadioButton
      fieldName="additionalPassenger"
      label="Yes"
      onClickCallback={[Function]}
      validation={[Function]}
      value="yes"
    />
    <RadioButton
      fieldName="additionalPassenger"
      label="No"
      onClickCallback={[Function]}
      validation={[Function]}
      value="no"
    />
  </RadioGroup>
</FormSection>
`;
